--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,7 +8,7 @@
     width: 100%;
     background-color: rgb(99, 241, 175);
     padding: 5px;
-    justify-content: end;
+    justify-content: flex-end;
     border-radius: 4px;
     box-sizing: border-box;
 }
