--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   font-size: 0.875rem;
   line-height: 1.43;
 }
-body, #root,  #root > div {
+html, body, #root,  #root > div {
   height: 100vh;
 }
