--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,17 +4,22 @@
 }
 .header{
     display: flex;
-    align-items: center;
     width: 100%;
-    background-color: rgb(99, 241, 175);
-    padding: 5px;
-    justify-content: flex-end;
-    border-radius: 4px;
+    background-color: white;
+    padding: 15px 20px;
+    justify-content: space-between;
     box-sizing: border-box;
+}
+.header #dark{
+    background-color: #121212;
+}
+.image{
+    width: 280px;
+    height: 35px;
 }
 .link{
     text-decoration: none;
-    color: rgb(81, 210, 150);
+    color: white;
     font-weight: 400;
     font-size: 18px;
     padding: 10px;
