--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,13 +5,18 @@
 .header{
     display: flex;
     width: 100%;
-    background-color: white;
+    /* background-color: white; */
     padding: 15px 20px;
     justify-content: space-between;
     box-sizing: border-box;
 }
-.header #dark{
+.light{
+    background-color: white;
+    color: black;
+}
+.dark{
     background-color: #121212;
+    color: white;
 }
 .image{
     width: 280px;
