--- a/src/Components/FavCities/FavCities.css
+++ b/src/Components/FavCities/FavCities.css
@@ -8,6 +8,9 @@
 .fav-cities-list{
     padding: 0;
 }
+.fav-cities-list:hover{
+    cursor: context-menu;
+}
 .fav-cities-list>div{
     justify-content: space-between;
 }
