--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
     background-color: white;
     color: blavk;
     overflow: auto;
-    background-image: url(./img/birds.jpg);
+    background-image: url(./img/sky2.png);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
