--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
     background-color: white;
     color: blavk;
     overflow: auto;
-    background-image: url(./img/sky2.png);
+    background-image: url(./img/background.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
